--- a/src/app/modules/menu-layout/components/clients/clients.component.html
+++ b/src/app/modules/menu-layout/components/clients/clients.component.html
@@ -2,10 +2,10 @@
 <div nz-row class="row-1">
   <div nz-col nzOffset="3" nzSpan="5">
     <div *ngIf="!disableClients ; else enableClients">
-      <button nz-button [nzType]="'primary'" (click)="GetClients(0)"><span>Mostrar desabilitados</span></button>
+      <button nz-button [nzType]="'primary'" (click)="GetClients(0, true)"><span>Mostrar desabilitados</span></button>
     </div>
     <ng-template #enableClients>
-      <button nz-button [nzType]="'primary'" (click)="GetClients(1)"><span>Mostrar Habilitados</span></button>
+      <button nz-button [nzType]="'primary'" (click)="GetClients(1, true)"><span>Mostrar Habilitados</span></button>
     </ng-template>
 
   </div>
@@ -66,7 +66,7 @@
         
                       </div>
                     </div>
-
+<!-- 
                     <div nz-row>
                       <div nz-col>
                         <label>Logo de cliente</label>
@@ -79,7 +79,7 @@
                         </div>
 
                       </div>
-                    </div>
+                    </div> -->
 
       
                     
