--- a/src/app/modules/menu-layout/components/zones/zones.component.html
+++ b/src/app/modules/menu-layout/components/zones/zones.component.html
@@ -1,87 +1,17 @@
 <h1>Zona</h1>
-  <div nz-row class="row-1">
-    <div nz-col nzOffset="3" nzSpan="6">
-      <div *ngIf="!zonaIsDisable ; else enableClients">
-        <button nz-button [nzType]="'primary'" (click)="GetZones(0, true)"><span>Mostrar desabilitados</span></button>
-      </div>
-      <ng-template #enableClients>
-        <button nz-button [nzType]="'primary'" (click)="GetZones(1, true)"><span>Mostrar Habilitados</span></button>
-      </ng-template>
-  
+<div nz-row class="row-1">
+
+  <div nz-col nzOffset="3" nzSpan="6">
+    <div *ngIf="!zonaIsDisable ; else enableClients">
+      <button nz-button [nzType]="'primary'" (click)="GetZones(0, true)"><span>Mostrar desabilitados</span></button>
     </div>
+    <ng-template #enableClients>
+      <button nz-button [nzType]="'primary'" (click)="GetZones(1, true)"><span>Mostrar Habilitados</span></button>
+    </ng-template>
 
-    <div nz-col nzOffset="1" nzSpan="4" class="row1-col1">
+  </div>
 
-        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva zona</span></button>
-        <nz-modal [(nzVisible)]="isVisible" nzTitle="Zonas" (nzOnCancel)="handleCancel()" (nzOnOk)="PostZone()">
-          <ng-container *nzModalContent>
-
-            <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
-              <div nz-row class="row-1">
-                <div nz-col  [nzSpan]="24" class="row1-col1">
-                    <label>Codigo</label>
-                    <div nz-row>
-                      <nz-form-item>
-                        <nz-form-control>
-                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="codigo" [disabled]="false" />
-                        </nz-form-control>
-                      </nz-form-item>
-                    </div>
-    
-
-                </div>
-              </div>
-              <div nz-row class="row-2">
-                
-                <div nz-col [nzSpan]="24" class="row3-col1">
-
-                    <label>Descripcion</label>
-                    <div nz-row>
-                      <nz-form-item>
-                        <nz-form-control>
-                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" Zona ## " formControlName="descripcion" [disabled]="false" />
-                        </nz-form-control>
-                      </nz-form-item>
-                    </div>
-    
-
-                </div>
-
-              </div>
-              <div nz-row class="row-3">
-                
-                <div nz-col [nzSpan]="24" class="row3-col1">
-                    
-                    <label>Observacion</label>
-                    <div nz-row>
-                        <nz-form-item>
-                          <nz-form-control>
-                            <textarea class="inputLarge"  nz-input rows="2" placeholder=" Escriba algo respecto a la zona " formControlName="observacion"></textarea>
-                          </nz-form-control>
-                        </nz-form-item>
-                    </div>
-
-                </div>
-
-              </div>
-              
-            </form>
-          </ng-container>
-        </nz-modal>
-
-    </div>
-
-    <div nz-col nzOffset="1" nzSpan="8" class="row1-col2">
-
-        <nz-input-group [nzSuffix]="suffixIconSearch">
-          <input type="text" nz-input placeholder="input search text" />
-        </nz-input-group>
-        <ng-template #suffixIconSearch>
-          <i nz-icon nzType="search"></i>
-        </ng-template>
-        
-    </div>
-
+  <app-submit-zone-modal  (DataUpdated)="updateTable($event)"></app-submit-zone-modal>
 
 </div>
 <div nz-row class="row-2">
@@ -112,12 +42,22 @@
             <td>{{ data.descripcion }}</td>
             <td>{{ data.observacion }}</td>
             <td nzRight>
-              <div *ngIf="data.estado; else disablesList"> 
-                  <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableClient(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+              <div nz-row>
+                <div nz-col>
+                  <div *ngIf="data.estado; else disablesList"> 
+                      <button nz-button nzSize="small" nzDanger nzType="primary" (click)="disableClient(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                  </div>
+                  <ng-template #disablesList>
+                      <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableClient(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                  </ng-template>
+
+                </div>
+                <div nz-col nzOffset="3">
+                  <app-submit-zone-modal  [dataPosition]="data"></app-submit-zone-modal>
+
+                </div>
               </div>
-              <ng-template #disablesList>
-                  <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableClient(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
-              </ng-template>
+              
             </td>
           </tr>
         </tbody>
