--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -1,23 +1,22 @@
 <h1>Contratos</h1>
 <div nz-row class="row-1">
 
-    <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
+  <div nz-col nzSpan="4">
+    <div *ngIf="!constractsIsDisable ; else enable">
+      <button nz-button [nzType]="'primary'" (click)="GetContracts(0, true)"><span>Mostrar desabilitados</span></button>
+    </div>
+    <ng-template #enable>
+      <button nz-button [nzType]="'primary'" (click)="GetContracts(1, true)"><span>Mostrar Habilitados</span></button>
+    </ng-template>
+
+  </div>
+
+    <div nz-col nzSpan="5" class="row1-col1">
       <app-modal-new-contract [ListOfClients]="ListOfClients" (DataUpdated)="TablaUpdated($event)"></app-modal-new-contract>
     </div>
 
-    <div nz-col nzSpan="12" class="row1-col2">
-
-        <nz-input-group [nzSuffix]="suffixIconSearch">
-          <input type="text" nz-input placeholder="input search text" />
-        </nz-input-group>
-        <ng-template #suffixIconSearch>
-          <i nz-icon nzType="search"></i>
-        </ng-template>
-        
-    </div>
-
-
 </div>
+
 <div nz-row class="row-2">
   <div nz-col>
       <nz-table [nzData]="ListOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
@@ -42,14 +41,29 @@
         <tbody>
           <tr *ngFor="let data of ListOfData">    
             <td nzLeft nzAlign="center">
-              <app-modal-new-contract [ListOfClients]="ListOfClients" [dataPosition]="data"></app-modal-new-contract>
-                <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
+              <div nz-row>
+                <div nz-col>
+                  <div *ngIf="data.estado; else disablesList"> 
+                      <button nz-button nzSize="small" nzDanger nzType="primary" (click)="disableContract(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                  </div>
+                  <ng-template #disablesList>
+                      <button nz-button nzSize="small" nzType="primary" (click)=" disableContract(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                  </ng-template>
+  
+                </div>
+                <div nz-col nzOffset="3">
+                  <app-modal-new-contract [ListOfClients]="ListOfClients" [dataPosition]="data"></app-modal-new-contract>
+  
+                </div>
+
+              </div>
               </td>
             <td>{{data.id}}</td>
             <td>{{data.codigo}}</td>  
             <td>{{data.descripcion}}</td>
             <td>{{ data.cliente }}</td>
-            <td>{{ data.fechaCreacion }}</td>  
+            <td>{{ data.fechaCreacion   | date:'dd/M/yyyy'  }}</td>  
+            <td>{{ data.fechaVenc   | date:'dd/M/yyyy'  }}</td> 
             <td nzRight nzAlign="center">
                 <app-modal-medidores></app-modal-medidores>
               </td>
