--- a/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
@@ -1,4 +1,4 @@
-<button nz-button [nzType]="'primary'" (click)="showModal()"><i nz-icon nzType="clock-circle" nzTheme="outline"></i></button>
+<button nz-button [nzType]="'primary'" nzSize="small" (click)="showModal()"><i nz-icon nzType="clock-circle" nzTheme="outline"></i></button>
 <nz-modal [(nzVisible)]="isVisible" nzTitle="RollOver" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
     <ng-container *nzModalContent>
       <div nz-row>
