--- a/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
@@ -1,5 +1,5 @@
 
-<button nz-button [nzType]="'primary'" (click)="showModal()"><i nz-icon nzType="file-add" nzTheme="outline"></i></button>
+<button nz-button [nzType]="'primary'" nzSize="small" (click)="showModal()"><i nz-icon nzType="file-add" nzTheme="outline"></i></button>
 <nz-modal nzCentered [(nzVisible)]="isVisible" nzTitle="Medidores Virtuales" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
     <ng-container  *nzModalContent>
         <form  [formGroup]="validateForm" nz-form  nzLayout="horizontal">
