--- a/src/app/modules/menu-layout/components/zones/zones.component.html
+++ b/src/app/modules/menu-layout/components/zones/zones.component.html
@@ -1,7 +1,7 @@
 <h1>Zona</h1>
 <div nz-row class="row-1">
 
-  <div nz-col nzOffset="3" nzSpan="6">
+  <div nz-col nzSpan="6">
     <div *ngIf="!zonaIsDisable ; else enableClients">
       <button nz-button [nzType]="'primary'" (click)="GetZones(0, true)"><span>Mostrar desabilitados</span></button>
     </div>
@@ -16,10 +16,10 @@
 </div>
 <div nz-row class="row-2">
   <div nz-col>
-      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzPageSize]="10">
         <thead>
           <tr>
-          <th nzLeft nzWidth="80px">ID</th>
+          <th nzWidth="80px">ID</th>
             <th
               *ngFor="let column of listOfColumns"
               [nzSortOrder]="column.sortOrder"
@@ -32,33 +32,35 @@
             >
               {{ column.name }}
             </th>
-            <th nzRight nzWidth="80px">Acciones</th>
+            <th nzWidth="80px">Acciones</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let data of listOfData">
-            <td nzLeft>{{data.id}}</td>
+            <td>
+            <div nz-row>
+              <div nz-col>
+                <div *ngIf="data.estado; else disablesList"> 
+                    <button nz-button nzSize="small" nzDanger nzType="primary" (click)="disableClient(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                </div>
+                <ng-template #disablesList>
+                    <button nz-button nzType="primary"  nzShape="circle" (click)=" disableClient(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                </ng-template>
+
+              </div>
+              <div nz-col nzOffset="3">
+                <app-submit-zone-modal  [dataPosition]="data"></app-submit-zone-modal>
+
+              </div>
+            </div>
+            
+          </td>
+            
+            <td >{{data.id}}</td>
             <td>{{data.codigo}}</td>
             <td>{{ data.descripcion }}</td>
             <td>{{ data.observacion }}</td>
-            <td nzRight>
-              <div nz-row>
-                <div nz-col>
-                  <div *ngIf="data.estado; else disablesList"> 
-                      <button nz-button nzSize="small" nzDanger nzType="primary" (click)="disableClient(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
-                  </div>
-                  <ng-template #disablesList>
-                      <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableClient(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
-                  </ng-template>
-
-                </div>
-                <div nz-col nzOffset="3">
-                  <app-submit-zone-modal  [dataPosition]="data"></app-submit-zone-modal>
-
-                </div>
-              </div>
-              
-            </td>
+            
           </tr>
         </tbody>
       </nz-table>
